--- a/FillTextViewLib/res/values/strings.xml
+++ b/FillTextViewLib/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
 
-    <string name="app_name">GridLayoutTest</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">FillTextViewTest</string>
+    <string name="title_activity_main">FillTextViewTestActivity</string>
 
 </resources>
